--- a/NodeJS/Exercicios/Projeto 02 - NodeJS API RESTFUL/package.json
+++ b/NodeJS/Exercicios/Projeto 02 - NodeJS API RESTFUL/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx watch src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +12,9 @@
   "dependencies": {
     "fastify": "^4.24.1",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.8.5",
+    "tsx": "^3.13.0"
   }
 }
