--- a/NodeJS/Exercicios/Projeto 02 - NodeJS API RESTFUL/package.json
+++ b/NodeJS/Exercicios/Projeto 02 - NodeJS API RESTFUL/package.json
@@ -14,7 +14,9 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.1.0",
     "@types/node": "^20.8.5",
+    "eslint": "^8.51.0",
     "tsx": "^3.13.0"
   }
 }
