--- a/NodeJS/Exercicios/Projeto 02 - NodeJS API RESTFUL/package.json
+++ b/NodeJS/Exercicios/Projeto 02 - NodeJS API RESTFUL/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "fastify": "^4.24.1",
+    "knex": "^3.0.1",
+    "sqlite3": "^5.1.6",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
