--- a/NodeJS/Exercicios/Projeto 03 - API com SOLID e JWT/package.json
+++ b/NodeJS/Exercicios/Projeto 03 - API com SOLID e JWT/package.json
@@ -16,6 +16,7 @@
     "@rocketseat/eslint-config": "2.1.0",
     "@types/node": "20.8.7",
     "eslint": "8.51.0",
+    "prisma": "5.4.2",
     "tsup": "7.2.0",
     "tsx": "3.14.0",
     "typescript": "5.2.2"
